# CyberFinger_SteamVR

./: CLA.md  CMakeLists.txt  CMakePresets.json  README.md
bridge/: README.md  ble_diagnostic.py  build.bat  cyberfinger_bridge.py  cyberfinger_bridge.spec  cyberfinger_gamepad_bridge.py  cyberfinger_gui.py  handtracking_bridge.cpp  requirements.txt
bridge/assets/: cyberfinger_actions.json  cyberfinger_bindings_knuckles.json  cyberfinger_bindings_oculus_touch.json
bridge/installer/: setup.iss
bridge_linux/: README.md  cyberfinger_gui_linux.py  requirements.txt
resources/: driver.vrdrivermanifest
resources/input/: cyberfinger_bindings.json  cyberfinger_profile.json
resources/settings/: default.vrsettings
src/: BoneData.h  HandTrackingReceiver.cpp  HandTrackingReceiver.h  MergedController.cpp  MergedController.h  ServerProvider.cpp  ServerProvider.h  SkeletonComposer.cpp  SkeletonComposer.h  Utils.cpp  Utils.h  driver_main.cpp
